--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
-  "name": "sn-minimal-markdown-editor",
-  "version": "1.3.9",
+  "name": "@standardnotes/markdown-minimal",
+  "private": true,
+  "version": "1.3.13",
   "description": "A minimal Markdown editor for Standard Notes.",
   "main": "dist/dist.js",
   "author": "Standard Notes <hello@standardnotes.org>",
   "scripts": {
-    "prepublish": "npm run build", 
-    "build": "grunt"
-  },
-  "dependencies": {
-    "sn-codemirror-search": "1.0.0"
-  },
-  "resolutions": {
-    "**/**/node-gyp": "5.0.0"
+    "deprecated:compile": "grunt",
+    "deprecated:test": "echo \"Error: no test specified\" && exit 0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
@@ -28,6 +23,8 @@
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-newer": "^1.3.0",
+    "sass": "*",
+    "sn-codemirror-search": "1.0.0",
     "sn-stylekit": "2.1.0"
   }
 }
