--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
   "name": "@standardnotes/markdown-minimal",
-  "private": true,
-  "version": "1.3.13",
+  "publishConfig": {
+    "access": "public"
+  },
+  "version": "1.3.0",
   "description": "A minimal Markdown editor for Standard Notes.",
+  "author": "Standard Notes Retired",
   "main": "dist/dist.js",
-  "author": "Standard Notes <hello@standardnotes.org>",
+  "sn": {
+    "name": "Minimal Markdown",
+    "content_type": "SN|Component",
+    "main": "index.html",
+    "area": "editor-editor",
+    "spellcheckControl": true,
+    "note_type": "markdown",
+    "file_type": "txt"
+  },
   "scripts": {
-    "deprecated:compile": "grunt",
-    "deprecated:test": "echo \"Error: no test specified\" && exit 0"
+    "build": "grunt",
+    "test": "echo \"Error: no test specified\" && exit 0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
-    "@standardnotes/component-relay": "2.2.0",
+    "@standardnotes/component-relay": "standardnotes/component-relay#839ff5db9bc92db9d42cad8d202ddc4df729597d",
     "babel-cli": "^6.26.0",
     "codemirror": "^5.56.0",
     "grunt": "^1.2.1",
